ms factory without sound cards

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -52,7 +52,7 @@ route {
 	if(is_method("INVITE") && !has_totag()) {
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
-		if (!rms_media_start("./voice_file/answer.wav")) {
+		if (!rms_media_start("/home/cloud/git/voip_patrol/voice_files/reference_8000_12s.wav")) {
 			xerr("rtp_media_server error!");
 		}
 	}
