rtp_media_server: call disconnection using dialog

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -27,8 +27,8 @@ loadmodule "xlog"
 loadmodule "rtp_media_server"
 modparam("rtp_media_server", "server_address", "127.0.0.102")
 modparam("rtp_media_server", "log_file_name", "/tmp/rms_transfer.log")
-
-listen=udp:0.0.0.0:5060
+modparam("tm", "wt_timer", 1000)
+listen=udp:127.0.0.2:5060
 
 failure_route[FAILURE] {
 	xnotice("[FAILURE]\n");
@@ -47,12 +47,15 @@ branch_route[BRANCH] {
 }
 
 route {
+	if(t_precheck_trans()) {
+		t_check_trans();
+		exit;
+	}
 	t_check_trans();
-
 	if(is_method("INVITE") && !has_totag()) {
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
-		if (!rms_media_start("/home/cloud/git/voip_patrol/voice_files/reference_8000_12s.wav")) {
+		if (!rms_media_start("/home/cloud/Desktop/pcm1608s.wav")) {
 			xerr("rtp_media_server error!");
 		}
 	}
