rtp_media_server: local_uri

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -56,6 +56,8 @@ route {
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
 		if (!rms_media_start("/home/cloud/Desktop/pcm1608s.wav")) {
+			//sl_reply("503", "can not start media");
+			drop();
 			xerr("rtp_media_server error!");
 		}
 	}
