rtp_media_server: fix tm etc.

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -36,10 +36,16 @@ failure_route[FAILURE] {
 
 onreply_route {
 	xnotice("[DEFAULT_REPLY]\n");
+	if(is_method("BYE")){
+		xnotice("BYE RECEIVED [$ci]\n");
+		rms_sessions_dump();    # dump the call-id of each active media session
+		rms_media_stop();
+	}
 }
 
 onreply_route[REPLY] {
 	xnotice("[REPLY]\n");
+
 }
 
 branch_route[BRANCH] {
