server address not needed

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -7,7 +7,8 @@ debug=2
 log_stderror=no
 log_facility=LOG_LOCAL0
 #!endif
-
+debug=3
+log_stderror=yes
 memdbg=5
 memlog=5
 
@@ -25,10 +26,10 @@ loadmodule "siputils"
 loadmodule "xlog"
 
 loadmodule "rtp_media_server"
-modparam("rtp_media_server", "server_address", "192.168.7.214")
+//modparam("rtp_media_server", "server_address", "147.75.39.21")
 modparam("rtp_media_server", "log_file_name", "/tmp/rms_transfer.log")
 modparam("tm", "wt_timer", 1000)
-listen=udp:0.0.0.0:5060
+listen=udp:147.75.39.21:5090
 
 failure_route[FAILURE] {
 	xnotice("[FAILURE]\n");
@@ -61,7 +62,7 @@ route {
 	if(is_method("INVITE") && !has_totag()) {
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
-		if (!rms_media_start("/home/cloud/Desktop/pcm1608s.wav")) {
+		if (!rms_media_start("/tmp/reference_8000_.wav")) {
 			//sl_reply("503", "can not start media");
 			drop();
 			xerr("rtp_media_server error!");
