--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -7,13 +7,13 @@ debug=2
 log_stderror=no
 log_facility=LOG_LOCAL0
 #!endif
-debug=3
+debug=2
 log_stderror=yes
 memdbg=5
 memlog=5
 
 # number of SIP routing processes
-children=1
+children=5
 
 loadmodule "ctl"
 loadmodule "tm"
@@ -24,7 +24,7 @@ loadmodule "pv"
 loadmodule "textops"
 loadmodule "siputils"
 loadmodule "xlog"
-
+loadmodule "nathelper"
 loadmodule "rtp_media_server"
 //modparam("rtp_media_server", "server_address", "147.75.39.21")
 modparam("rtp_media_server", "log_file_name", "/tmp/rms_transfer.log")
@@ -60,6 +60,7 @@ route {
 	}
 	t_check_trans();
 	if(is_method("INVITE") && !has_totag()) {
+		fix_nated_contact();
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
 		if (!rms_media_start("/tmp/reference_8000_.wav")) {
