--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -63,11 +63,13 @@ route {
 		fix_nated_contact();
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
-		if (!rms_media_start("/tmp/reference_8000_.wav")) {
+		if (!rms_media_start()) {
 			//sl_reply("503", "can not start media");
 			drop();
 			xerr("rtp_media_server error!");
-		}
+		} 
+		xnotice("[route] play ?!\n");
+		rms_play("/tmp/reference_8000_.wav");
 	}
 
 	if(is_method("BYE")){
