--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -37,29 +37,33 @@ failure_route[FAILURE] {
 
 onreply_route {
 	xnotice("[DEFAULT_REPLY]\n");
-	if(is_method("BYE")){
-		xnotice("BYE RECEIVED [$ci]\n");
-		rms_sessions_dump();    # dump the call-id of each active media session
-		rms_media_stop();
-	}
 }
 
 onreply_route[REPLY] {
 	xnotice("[REPLY]\n");
-
 }
 
 branch_route[BRANCH] {
 	xnotice("[BRANCH]\n");
 }
 
+event_route[rms:start] {
+	xnotice("[rms:start] play ...\n");
+	rms_play("/tmp/reference_8000_.wav", "rms:after_play");
+};
+
+event_route[rms:after_play] {
+	xnotice("[rms:after_play] play done...\n");
+	rms_hangup();
+};
+
 route {
-	if(t_precheck_trans()) {
+	if (t_precheck_trans()) {
 		t_check_trans();
 		exit;
 	}
 	t_check_trans();
-	if(is_method("INVITE") && !has_totag()) {
+	if (is_method("INVITE") && !has_totag()) {
 		fix_nated_contact();
 		xnotice("INVITE RECEIVED [$ci]\n");
 		rms_sessions_dump();     # dump the call-id of each active session
@@ -68,11 +72,10 @@ route {
 			drop();
 			xerr("rtp_media_server error!");
 		} 
-		xnotice("[route] play ?!\n");
-		rms_play("/tmp/reference_8000_.wav");
+
 	}
 
-	if(is_method("BYE")){
+	if (is_method("BYE")){
 		xnotice("BYE RECEIVED [$ci]\n");
 		rms_sessions_dump();    # dump the call-id of each active media session
 		rms_media_stop();
