fork: maintain old module export interface

--- a/src/modules/topos/Makefile
+++ b/src/modules/topos/Makefile
@@ -7,6 +7,7 @@ include ../../Makefile.defs
 auto_gen=
 NAME=topos.so
 LIBS=
+DEFS+=-DKAMAILIO_MOD_INTERFACE
 
 SERLIBPATH=../../lib
 SER_LIBS+=$(SERLIBPATH)/srdb1/srdb1
