rtp_media_server: rename rms sessions to rms dialogs
This was creating confusion, the term session is reserved for the RTP sessions

--- a/src/modules/rtp_media_server/config_example/kamailio.cfg
+++ b/src/modules/rtp_media_server/config_example/kamailio.cfg
@@ -20,11 +20,25 @@ loadmodule "nathelper"
 loadmodule "rtp_media_server"
 modparam("rtp_media_server", "log_file_name", "/tmp/rms_transfer.log")
 modparam("tm", "wt_timer", 1000)
-listen=udp:147.75.39.121:5090
+listen=udp:0.0.0.0:5090
 
 event_route[rms:start] {
 	xnotice("[rms:start] play ...\n");
-	rms_play("./voice_files/OSR_us_000_0010_8k.wav", "rms:after_play");
+	rms_play("/opt/voice_files/OSR_us_000_0010_8k.wav", "rms:after_play");
+};
+
+event_route[rms:bridge] {
+	$var(target) = "sip:456@localhost:5069;";
+	if (!rms_bridge("$var(target)", "rms:bridged")) {
+		send_reply("604", "server error");
+		xerr("rtp_media_server bridge error!\n");
+		exit;
+	}
+};
+
+event_route[rms:play_bridge] {
+	xnotice("[rms:play_bridge] play ...\n");
+	rms_play("/opt/voice_files/Bach_10s_8000.wav", "rms:bridge");
 };
 
 event_route[rms:after_play] {
@@ -50,7 +64,11 @@ route {
 	xnotice("[$rm][$ci]\n");
 	if (is_method("INVITE") && !has_totag()) {
 		fix_nated_contact();
-		if ($rU == "888") {
+
+		if ($rU == "456") {
+			rms_answer("rms:play_bridge");
+			exit;
+		} else if ($rU == "888") {
 			$var(target) = "sip:" + $rU + "@8.8.8.8:5069;";
 			if (!rms_bridge("$var(target)", "rms:bridged")) {
 				send_reply("503", "server error");
@@ -64,7 +82,7 @@ route {
 			exit;
 		}
 	}
-	if(rms_session_check())
+	if(rms_dialog_check())
 		rms_sip_request();
 	exit;
 }
